--- a/week2/assignment/parent_flow-deployment.yaml
+++ b/week2/assignment/parent_flow-deployment.yaml
@@ -1,15 +1,17 @@
 ###
 ### A complete description of a Prefect Deployment for flow 'parent-flow'
 ###
-name: parametrized web to gcs
+name: web to gcs with github
 description: this is the parent flow for elt web to gcs
-version: 6b7ebebbcd8db2203f3b77b8bac42abc
+version: 9b99564fe9708268bf4aea97c607f93a
 # The work queue that will handle this deployment's runs
 work_queue_name: default
-work_pool_name: null
-work_pool_queue_name: null
 tags: []
-parameters: {}
+parameters: {
+  "color":"green",
+  "months":[11],
+  "year":2020
+}
 schedule: null
 infra_overrides: {}
 infrastructure:
@@ -28,8 +30,16 @@ infrastructure:
 ###
 flow_name: parent-flow
 manifest_path: null
-storage: null
-path: /home/gbotemi/Documents/DataEngZoomcamp/week2/assignment
+storage:
+  repository: https://github.com/GbotemiB/Data_Engineering_Zoomcamp/
+  reference: main
+  access_token: null
+  _block_document_id: f8119293-06dd-4437-a6d6-a1bee83985b2
+  _block_document_name: dataeng-git
+  _is_anonymous: false
+  block_type_slug: github
+  _block_type_slug: github
+path: ''
 entrypoint: etl_web_to_gcs.py:parent_flow
 parameter_openapi_schema:
   title: Parameters
@@ -54,4 +64,3 @@ parameter_openapi_schema:
   - months
   - year
   definitions: null
-timestamp: '2023-02-08T00:35:55.122798+00:00'
