--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ dask-worker-space/
 # VCS
 .git/
 .hg/
+# Default .gitignore content added by dbt Cloud
+target/
+dbt_packages/
+logs/
+# end dbt Cloud content
