--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'de_taxi'
 version: '1.0.0'
 config-version: 2
 
@@ -32,7 +32,15 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  my_new_project:
+  de_taxi:
     # Applies to all files under models/example/
     example:
       materialized: view
+vars:
+  payment_type_values: [1,2,3,4,5,6]
+
+seeds:
+  de_taxi:
+    taxi_zone_lookup:
+      +column_types:
+        locationid: numeric
