--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,7 +32,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  de_taxi:
+  nyc_dataset:
     # Applies to all files under models/example/
     example:
       materialized: view
@@ -40,7 +40,7 @@ vars:
   payment_type_values: [1,2,3,4,5,6]
 
 seeds:
-  de_taxi:
+  nyc_dataset:
     taxi_zone_lookup:
       +column_types:
         locationid: numeric
